<resources>
    <string name="app_name">Teatro Atenea</string>
    <string name="texto_teatro">Compra tus entradas</string>
    <string name="texto_obra">La Celestina</string>
    <string name="text_comprar">Comprar entradas</string>
    <string name="text_num">Cantidad:</string>
    <string name="text_fila">Fila</string>
    <string name="text_columna">Asiento</string>
    <string name="text_f">F</string>
    <string name="text_c">A</string>
    <string name="text_butaca1">Butaca 1: </string>
    <string name="text_butaca2">Butaca 2: </string>
    <string name="text_no_sel">No puedes coger más butacas</string>
    <string name="text_compra">Has comprado las butacas</string>
    <string name="text_sel">Seleccionadas:</string>
    <string name="text_ocupada">La butaca ya está ocupada</string>
    <string name="text_volver">Volver al inicio</string>
    <string name="text_seleccionar">Selecciona las butacas</string>
    <string name="text_moneda">€</string>
    <string name="text_leyenda">Leyenda</string>
    <string name="text_leyenda_libre">Asiento libre</string>
    <string name="text_leyenda_ocupado">Asiento ocupado</string>
    <string name="text_leyenda_seleccionado">Asiento seleccionado</string>
</resources>