<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_teatro"
        android:layout_marginEnd="10dp"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_obra"
        android:layout_marginTop="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/text_num" />
        <TextView
            android:id="@+id/textPrecio"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="" />
        <TextView
            android:id="@+id/textMoneda"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:text="@string/text_moneda"
            android:layout_marginEnd="20dp"/>

        <NumberPicker
            android:id="@+id/numPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </NumberPicker>
    </LinearLayout>
    <TextView
        android:id="@+id/seleccionadas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginBottom="10dp"
        />

    <Button
        android:id="@+id/btnComprar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_comprar"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>